# Propstack-ai-layer

./: .env.example  .gitignore  Dockerfile  README.md  TEST_PLAN.md  list_tables.py  pyproject.toml
adk_agents/propstack/: __init__.py
app/: config.py  dependencies.py  exceptions.py  main.py
app/.adk/: session.db
app/agents/: __init__.py  shared.py
app/integrations/: twilio_voice.py
app/routers/: analytics.py  calls.py  maintenance.py  maintenance_tickets.py  maintenance_twilio.py  payments.py  properties.py  rent.py  twilio.py
app/schemas/: rent.py
app/services/: __init__.py  call_analysis_service.py  call_policy_service.py  live_session_service.py  rent_cycle_service.py  session_service.py
app/tools/: call_tools.py  maintenance_tools.py  management_tools.py  notification_tools.py  rent_intel_tools.py  rent_tools.py  tenant_tools.py  voice_tools.py
app/utils/: transcript_collector.py
docs/: BACKEND_REVIEW.md  DEMO_CHECKLIST.md  PROGRESS.md  logic.md  project_review.md
plans/: adk-voice-call-implementation.md
rent_collection_agent/: agent.py
rent_collection_agent/.adk/: session.db
scripts/: check_db_user.py  debug_payments.py  demo_rent_flow.sh  simulate_razorpay_webhook.py  test_razorpay_webhook.py
supabase/migrations/: 20260313000000_add_call_analysis_columns.sql  README.md
tests/: test_error_handlers.py
tests/agents/: test_rent_collection_callbacks.py
tests/integrations/: test_gemini_live.py  test_twilio_voice.py
tests/routers/: test_maintenance_router.py  test_maintenance_tickets_router.py  test_payments_router.py  (+1 more)
(+15 files in other folders)
